syntax = "proto3";
package proto;

message Event {
  string name = 15;

  enum Type {
    // for server
    kNone = 0;
    kCreateRoom = 1;
    kEnterRoom = 2;
    kLeaveRoom = 3;

    // for room
    kChangeWaitingStatus = 4;
  }
  Type type = 1;
  repeated int32 arguments = 2;
  uint64 sender_id = 3;

  enum ReceiverType {
    kServer = 0;
    kRoom = 1;
  }
  ReceiverType receiver_type = 4;
}
